--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,8 @@
   <body>
     <header>
       <ul>
-        <li><a href="/tops">アプリ紹介</a></li>
-        <li><a href="/blogs">日本酒ブログ</a></li>
+        <li><a href="/tops">About Tsubuyaki</a></li>
+        <li><a href="/blogs">Tsubuyaki</a></li>
       </ul>
     </header>
     <%= yield %>
