--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -3,8 +3,8 @@
 <article>
     <div class="contents">
         <ul class="row">
-            <li class="col-sm-12 col-md-6">日本酒に関するブログを投稿するアプリケーションです。</li>
-            <li class="col-sm-12 col-md-6"><img src="assets/sake01.jpg"></li>
+            <li class="col-sm-12 col-md-6">考えをつぶやけるアプリです。</li>
+            <li class="col-sm-12 col-md-6"><img src="/assets/clone01.JPG"></li>
         </ul>
     </div>
 </article>
