--- a/app/assets/stylesheets/tops.scss
+++ b/app/assets/stylesheets/tops.scss
@@ -7,7 +7,7 @@ ul{
 
 body {
   /* 画像ファイルの指定 */
-  background-image: url(/assets/sake02.jpg);
+  background-image: url(/assets/clone02.jpg);
   
   /* 画像を常に天地左右の中央に配置 */
   background-position: center center;
@@ -27,7 +27,7 @@ body {
 
 header {
   width: 100%;
-  background-color: #2c3e50;
+  background-color: #00BFFF;
   height: 54px;
 }
 
@@ -66,7 +66,7 @@ header ul:after {
 
 footer {
   width: 100%;
-  background-color:#2c3e50;
+  background-color: #00BFFF;
   padding: 20px 0 10px 0;
   color: white;
   margin: auto;
