--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -11,15 +11,16 @@
     </div>
   <% end %>
 
-  <div class="blog_title">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
-  </div>
+  <!--<div class="blog_title">-->
+  <!--  <%= form.label :title %>-->
+  <!--  <%= form.text_field :title %>-->
+  <!--</div>-->
   <div class="blog_title">
     <%= form.label :content %>
     <%= form.text_field :content %>
   </div>
-  <%= form.submit %>
+  <!--<%= form.submit %>-->
+  <button type="submit">つぶやく</button>
 <% end %>
 
-<%= link_to "ブログ一覧画面にもどる", blogs_path %>
+<%= link_to "つぶやき一覧に戻る", blogs_path %>
