--- a/app/views/blogs/confirm.html.erb
+++ b/app/views/blogs/confirm.html.erb
@@ -1,16 +1,13 @@
-<h3>以下の内容で、送信する。</h3>
+<h3>以下の内容でつぶやく。</h3>
 
 <%= form_with(model: @blog, url: blogs_path, local: true) do |form| %>
-  <%= form.hidden_field :title %>
   <%= form.hidden_field :content %>
 
-  <p>タイトル:<%= @blog.title %></p>
   <p>本文:<%= @blog.content %></p>
-  <%= form.submit  "登録する" %>
+  <%= form.submit  "つぶやく" %>
 <% end %>
 
 <%= form_with(model: @blog, url: new_blog_path, local: true, method: 'get') do |form| %>
-  <%= form.hidden_field :title %>
   <%= form.hidden_field :content %>
   <%= form.submit "もどる" , name: 'back' %>
 <% end %>
