--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,16 +1,16 @@
-<h1>日本酒ブログ</h1>
+<h1>Tsubuyaki</h1>
 
 <p><%= notice %></p>
 
 <div class="container">
   <div id="new-blog-link">
-    <%= link_to '新規ブログを作成する', new_blog_path %>
+    <%= link_to 'つぶやく', new_blog_path %>
   </div>
 
   <div class="row">
     <% @blogs.each do |blog| %>
       <div class="col-xs-12 col-md-6 blog-panel">
-        <h2><%= blog.title %></h2>
+        <p><%= blog.created_at %></p>
         <p><%= blog.content %></p>
         <div class="blog-links">
           <%= link_to 'Show', blog, class: 'btn btn-default' %>
