--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,5 +1,4 @@
-<h1>ブログ詳細画面</h1>
-<p>タイトル: <%= @blog.title %></p>
+<h1>Tweet詳細画面</h1>
 <p>内容: <%= @blog.content %></p>
 
-<%= link_to "ブログ一覧画面にもどる", blogs_path %>
+<%= link_to "Tweet一覧画面にもどる", blogs_path %>
