--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -4,7 +4,7 @@
     <div class="contents">
         <ul class="row">
             <li class="col-sm-12 col-md-6">考えをつぶやけるアプリです。</li>
-            <li class="col-sm-12 col-md-6"><img src="/assets/clone01.JPG"></li>
+            <li class="col-sm-12 col-md-6"><img src="assets/clone01.JPG"></li>
         </ul>
     </div>
 </article>
