--- a/app/assets/stylesheets/tops.scss
+++ b/app/assets/stylesheets/tops.scss
@@ -7,7 +7,7 @@ ul{
 
 body {
   /* 画像ファイルの指定 */
-  background-image: url(assets/clone02.jpg);
+  background-image: url(/assets/clone02.jpg);
   
   /* 画像を常に天地左右の中央に配置 */
   background-position: center center;
