--- a/app/assets/stylesheets/tops.scss
+++ b/app/assets/stylesheets/tops.scss
@@ -72,7 +72,7 @@ footer {
   margin: auto;
   padding-bottom: 10px;
   font-size: 12px;
-  position: absolute;
+  position: relative;
   bottom: 0;
 }
 
@@ -83,4 +83,5 @@ html {
 
 body {
   text-align: center;
+  word-wrap: break-word;
 }
